global/_panels.scss
/* ... */
.a-panel.a-panel--pt .a-panel__content .a-panel__list {
  margin: 20px 20px 0px 20px;

  .grid.grid--list {
    padding: 0px;
  }
}

// PANEL PADDING

// default
.a-panel.a-panel--pt.a-panel--render, .a-panel.a-panel--pt.a-panel--render.a-panel--default {
  padding: 16px 20px;
}
// default with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--hasbackground, .a-panel.a-panel--pt.a-panel--render.a-panel--default.a-panel--hasbackground {
  padding: 16px 20px;
}

// default + body
.a-panel.a-panel--pt.a-panel--body, .a-panel.a-panel--pt.a-panel--default.a-panel--body {
  padding: 16px 20px;
}
// default + body with bg
.a-panel.a-panel--pt.a-panel--hasbackground.a-panel--body, .a-panel.a-panel--pt.a-panel--default.a-panel--hasbackground.a-panel--body {
  padding: 80px 20px;
}

// default + parallax
.a-panel.a-panel--pt.a-panel--render.a-panel--parallax, .a-panel.a-panel--pt.a-panel--render.a-panel--default.a-panel--parallax {
  padding: 16px 20px;
}
// default + parallax with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--hasbackground.a-panel--parallax, .a-panel.a-panel--pt.a-panel--render.a-panel--default.a-panel--hasbackground.a-panel--parallax {
  padding: 40px 20px;
}

// blog
.a-panel.a-panel--pt.a-panel--render.a-panel--blog {
  padding: 16px 20px;
}
// blog with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--blog.a-panel--hasbackground {
  padding: 80px 20px;
}

// doc and doc
.a-panel.a-panel--pt.a-panel--render.a-panel--document {
  padding: 16px 20px;
}
// doc and doc with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--document.a-panel--hasbackground  {
  padding: 80px 20px;
}

// redirect
.a-panel.a-panel--pt.a-panel--render.a-panel--redirect {
  padding: 16px 20px;
}
// redirect with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--redirect.a-panel--hasbackground  {
  padding: 80px 20px;
}

// forms service
.a-panel.a-panel--pt.a-panel--render.a-panel--formsservice {
  padding: 16px 20px;
}
// forms service with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--formsservice.a-panel--hasbackground  {
  padding: 80px 20px;
}

// forms service
.a-panel.a-panel--pt.a-panel--render.a-panel--formsservice {
  padding: 16px 20px;
}
// forms service with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--formsservice.a-panel--hasbackground  {
  padding: 80px 20px;
}

// "panel"
.a-panel.a-panel--pt.a-panel--render.a-panel--panel {
  padding: 16px 20px;
}
// "panel" with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--panel.a-panel--hasbackground  {
  padding: 80px 20px;
}

// list
.a-panel.a-panel--pt.a-panel--render.a-panel--list {
  padding: 16px 20px;
}
// list with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--list.a-panel--hasbackground  {
  padding: 80px 20px;
}

// stage
.a-panel.a-panel--pt.a-panel--render.a-panel--stage {
  padding: 16px 20px;
}
// stage with bg
.a-panel.a-panel--pt.a-panel--render.a-panel--stage.a-panel--hasbackground  {
  padding: 80px 20px;
}

// feature
.a-panel.a-panel--feature {
  padding: 8px 20px;
}

// related assets (not a panel?)
.relateditem  {
  padding: 8px 20px;
}

.imagebanner__title {
  color: #fff;
}

.imagebanner__searchholder .searchform__inputtxt {
  width: 100%;
}

.grid.grid--list.grid--4col {
  display: flex;
  align-items: stretch;
  flex-wrap: wrap;
}

// feature groups

.a-panel--feature:nth-child(even), .a-panel--feature:nth-child(odd) {
  background-color: #fff;
}

.grid.grid--feature.grid--4col, .grid.grid--feature.grid--2col {
  display: flex;
  align-items: stretch;
  flex-wrap: wrap;
  justify-content: center;
}

.grid__cell.grid__cell--feature.grid__cell--cols1 {
  padding: 0px;
}

.a-panel--feature {

  .grid__cell--feature .grid__cellwrap {
    height: 100%;
    padding: 10px;
  }

  .item.item--article {
    background-color: #fff;
    height: 100%;
    border: solid #B0B0B0 1px;
    border-radius: $feature-panel-border-radius;
    overflow: hidden;

    .item__content {
      padding: 20px !important;
    }

    .item__imagecontainer {
      display: block;
    }

    .gi-responsiveimage__fallback, .gi-responsiveimage__image {
      object-fit: cover;
      max-height: 125px;
     
    }
    .gi-responsiveimage.gi-responsiveimage--item.gi-responsiveimage--loaded {
      margin: 0px;
    }
  }

  .grid--2col>.grid__cell:nth-child(2n+1) {
    clear: both;
  }
}

.body--no-aside .a-panel--feature .item.item--article {
  &:not(:has(.item__imagecontainer)) {
    padding-top: 64%;
  }
}

.body--no-aside.body--hide-feature-images .a-panel--feature .item.item--article {
  &:not(:has(.item__imagecontainer)) {
    padding-top: 0px;
  }
}

.body--hide-feature-images .a-panel--feature .item.item--article {
  .item__imagecontainer {
    display: none;
  }
}

@media only screen and (max-width: 1079px) {
  .a-panel--feature .item.item--article:not(:has(.item__imagecontainer)) {
    padding-top: 0;
  }
}

.a-panel.a-panel--hasbackground .a-panel__title {
  color: #050505;
  font-weight: 700;
}

h2.a-panel__title {
  color: #050505;
  font-weight: 700;
  font-size: $h2-font-size;
}

.a-panel--feature h2.a-panel__title {
  display: block;
  visibility: visible;
  border: 0;
  clip: rect(0 0 0 0);
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  color: #000;
  background: #fff;
}

.body--display-feature-title .a-panel--feature h2.a-panel__title {
  color: #050505;
  font-weight: 700;
  font-size: $h2-font-size;
  width: auto;
  overflow: visible;
  margin: revert;
  height: auto;
  
  position: relative;
}

.item.item--article .item__title a {
  color: $list-panel-link-color;
  border-bottom: solid 2px $list-panel-link-color;
  text-decoration: none;

  &:hover {
    color: $list-panel-link-color-hover;
    border-bottom: solid 2px $list-panel-link-color-hover;
    text-decoration: none;
  }

  &:focus {
    color: #050505;
    background-color: $focus-color;
    border-bottom: solid 2px #050505;
    text-decoration: none;
  }
}
/* ... */

